# dream

./: .gitignore  pyproject.toml  setup.py
dream/plugins/JobShop/: ReadJSMachineShifts.py  ReadJSShifts.py
dream/simulation/: Allocation.py  AllocationManagement.py  AllocationRoutine.py  Assembly.py  Batch.py  BatchDecomposition.py  BatchDecompositionBlocking.py  BatchDecompositionStartTime.py  BatchReassembly.py  BatchReassemblyBlocking.py  BatchScrapMachine.py  BatchScrapMachineAfterDecompose.py  BatchSource.py  Break.py  CompoundObject.py  ConditionalBuffer.py  ConditionalBufferManaged.py  Conveyer.py  CoreObject.py  Dismantle.py  Entity.py  EventGenerator.py  ExcelHandler.py  Exit.py  ExitJobShop.py  Failure.py  Frame.py  FutureDemandCreator.py  Globals.py  Job.py  JobMA.py  LineClearance.py  LineGenerationCMSD.py  LineGenerationJSON.py  M3.py  Machine.py  MachineJobShop.py  MachineManagedJob.py  ManPyObject.py  Mould.py  (+41 more)
dream/simulation/Examples/: Aggregation.py  AggregationConcept.py  AssemblyDismantle.py  AssemblyLine.py  BalancingABuffer.py  BufferAllocation.py  ChangingPredecessors.py  ClearBatchLines.py  CompoundMachine.py  DecompositionOfBatches.py  FactoryAggregation.py  JobShop1.py  JobShop1Trace.py  JobShop2EDD.py  JobShop2MC.py  JobShop2Priority.py  JobShop2RPC.py  JobShop2ScenarioAnalysis.py  MilkPlant01.py  MilkPlant02.py  NonStarvingLine.py  NonStarvingLineBatches.py  OperationalFailures.py  (+18 more)
dream/tests/: testGUIModels.py  testKEExamples.py  testRandomNumberGenerator.py  testSimulationExamples.py  testSimulationTopology.py  test_SimulationExamples.py
