[tool.poetry]
name = "dream-future"
version = "0.1.0"
description = "Python3 and SimPy4 update to ManPy"
authors = ["Simon Lidberg <simon.lidberg@gmail.com>"]
license = "LGPL-3.0"
readme = "README.rst"
homepage = "https://github.com/verbalins/dream-future"
repository = "https://github.com/verbalins/dream-future"
keywords = ["dream","discrete event simulation","simulation"]

[tool.poetry.dependencies]
python = "^3.8"
SimPy = "^4.0.1"
numpy = "^1.18.5"
pyparsing = "^2.4.7"
xlwt = "^1.3.0"
xlrd = "^1.2.0"
"zope.dottedname" = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
Black = "^19.10b0"
Flake8 = "^3.8.2"
mypy = "^0.780"
rope = "^0.17.0"
pytest-xdist = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
